--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Welcome</h1>
+<h1>FastCards</h1>
+<p>Create flashcards from photos of text</p>
+<p>For questions of support, please contact blckddr.apple.eu@proton.me</p>
 </body>
 </html>
