--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 <h1>FastCards</h1>
 <p>Create flashcards from photos of text</p>
-<p>For questions of support, please contact blckddr.apple.eu@proton.me</p>
+<p>For questions or support, please contact blckddr.apple.eu@proton.me</p>
 </body>
 </html>
